syntax = "proto3";
package sedachain.wasm_storage.v1;

import "gogoproto/gogo.proto";
import "sedachain/wasm_storage/v1/wasm_storage.proto";

option go_package = "github.com/sedaprotocol/seda-chain/x/wasm-storage/types";

// GenesisState defines wasm-storage module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated DataRequestWasm data_request_wasms = 2
      [ (gogoproto.nullable) = false ];
  repeated ExecutorWasm executor_wasms = 3 [ (gogoproto.nullable) = false ];
  string core_contract_registry = 4;
}
